Updated method placeCard, and Exception handling of goldenCard